hphp/hack/test/typecheck/string_expressions10.php.exp
File "string_expressions10.php", line 26, characters 30-31:
Could not find member wt in an object of type Blah (Typing[4053])
File "string_expressions10.php", line 18, characters 11-14:
This is why I think it is an object of type Blah
File "string_expressions10.php", line 12, characters 7-10:
Declaration of Blah is here
